Fixed horizontal scroll bar

--- a/client/src/css/FlightItem.css
+++ b/client/src/css/FlightItem.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    overflow: auto;
+    overflow: none;
     margin-top: 64px;
     /* border: 1px solid #e6d6d6; */
 
